--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.17",
     "@types/node": "20.8.7",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
@@ -30,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react-slick": "^0.23.12",
+    "daisyui": "^4.0.1",
     "msw": "^2.0.5"
   },
   "msw": {
