--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
