--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.12",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@prisma/client": "^5.7.1",
     "@types/node": "20.8.7",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
@@ -36,7 +38,8 @@
   "devDependencies": {
     "@types/react-slick": "^0.23.12",
     "daisyui": "^4.0.1",
-    "msw": "^2.0.5"
+    "msw": "^2.0.5",
+    "prisma": "^5.7.1"
   },
   "msw": {
     "workerDirectory": "public"
