--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.8.7",
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "bcrypt": "^5.1.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
     "moment": "^2.29.4",
