--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.31",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
