--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.5.6",
     "moment": "^2.29.4",
     "next": "13.5.6",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
