--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "stripe": "^14.10.0",
     "swiper": "^11.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
