--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.1",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
+    "firebase": "^10.7.1",
     "moment": "^2.29.4",
     "next": "13.5.6",
     "next-auth": "^4.24.5",
